--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
 	<title>Hello World</title>
 </head>
 <body>
-Learning Git
+<table cellspacing="10" cellpadding="10">
+	<thead>
+		<th>Ocean</th>
+		<th>Deep</th>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Palm Beach</td>
+			<td>192.3 M</td>
+		</tr>
+	</tbody>
+</table>
 </body>
 </html>
