--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 	<title>Hello World</title>
 </head>
 <body>
-	<h1>Hello World</h1>
+	<h1 Style="color:blue;">Hello World</h1>
 <table cellspacing="10" cellpadding="10">
 	<thead>
 		<th>Ocean</th>
